--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   flutter_facebook_auth: ^7.1.0 # For Facebook login
   lottie: ^3.3.1
   smooth_page_indicator: ^1.2.1
+  emoji_picker_flutter: ^4.3.0
 
 
 
